Option to hide Adb notification icon [1/2]
Change-Id: Ie269a3f7187e6e782980c250e0b4888af646e403

--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -57,4 +57,10 @@
     <string name="night_mode_auto">Automatic</string>
     <string name="keywords_display_night_mode">dark theme night mode dim screen invert brightness</string>
 
+    <!-- ADB debugging notifications -->
+    <string name="enable_adb_custom">Android debugging</string>
+    <string name="enable_adb_summary_custom">Enable the Android Debug Bridge (adb) interface</string>
+    <string name="adb_notify">ADB notification</string>
+    <string name="adb_notify_summary">Display a notification when android debugging is enabled</string>
+
 </resources>
