--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -241,4 +241,7 @@
 
     <!-- Volume keys control media stream, instead of ring/notification -->
     <string name="volume_key_control_media">Volume keys control media volume</string>
+
+    <!-- SuperSU header name - the app hides itself from launcher based on this resource name being present in com.android.settings -->
+    <string name="supersu_title">SuperSU</string>
 </resources>
