--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -34,4 +34,7 @@
     <string name="doze_notification_color_invert_summary_off">Ambient notifications will not be inverted</string>
     <string name="doze_notification_color_invert_summary_on">Ambient notifications will be inverted</string>
 
+    <!-- Tipsy OTA -->
+    <string name="slimota_title">TipsyOTA</string>
+
 </resources>
