--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -35,6 +35,16 @@
                     android:targetPackage="@string/additional_system_update"
                     android:targetClass="@string/additional_system_update_menu" />
         </PreferenceScreen>
+        
+        <!-- Tipsy OTA -->
+        <Preference
+               android:id="@+id/slimota"
+               android:title="@string/slimota_title">
+               <intent
+                       android:action="android.intent.action.MAIN"
+                       android:targetPackage="com.fusionjack.slimota"
+                       android:targetClass="com.fusionjack.slimota.MainActivity" />
+        </Preference>
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
