--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -17,13 +17,17 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         android:title="@string/about_settings">
 
-        <!-- System update settings - launches activity -->
+        <!-- Tipsy logo -->
+        <PreferenceScreen android:key="tipsy_logo"
+                          android:enabled="false"
+                          android:layout="@layout/tipsy_logo_row" />
+ 
+        <!-- System update settings - launches activity -->       
         <PreferenceScreen android:key="system_update_settings"
                 android:title="@string/system_update_settings_list_item_title"
                 android:summary="@string/system_update_settings_list_item_summary">
             <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
         </PreferenceScreen>
-
 
         <PreferenceScreen android:key="additional_system_update_settings"
                           android:title="@string/additional_system_update_settings_list_item_title">
@@ -110,7 +114,13 @@
                 android:shouldDisableView="false"
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"/>
-
+                
+        <!-- Tipsy version -->
+        <Preference android:key="tipsy_version"
+                style="?android:preferenceInformationStyle"
+                android:title="@string/tipsy_version_title"
+                android:summary="@string/tipsy_version_default"/>
+                
         <!-- Device Kernel version -->
         <Preference android:key="kernel_version"
                 android:enabled="false"
