--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -37,14 +37,14 @@
         </PreferenceScreen>
         
         <!-- Tipsy OTA -->
-        <Preference
-               android:id="@+id/slimota"
+        <PreferenceScreen
+               android:key="slimota"
                android:title="@string/slimota_title">
                <intent
                        android:action="android.intent.action.MAIN"
                        android:targetPackage="com.fusionjack.slimota"
                        android:targetClass="com.fusionjack.slimota.MainActivity" />
-        </Preference>
+        </PreferenceScreen>
 
 	<!-- Changelog -->
         <PreferenceScreen 
