Changelog in settings(1)
Change-Id: Ia0741d9bb9f8e6e9780cb1c4be933b2e21ccaec2
Signed-off-by: Martinusbe <martinusbe@gmail.com>

Conflicts:
	res/xml/device_info_settings.xml

Conflicts:
	res/values/slim_strings.xml

Conflicts:
	res/values/slim_strings.xml
	res/xml/device_info_settings.xml

--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -37,4 +37,8 @@
     <!-- Tipsy OTA -->
     <string name="slimota_title">TipsyOTA</string>
 
+    <!-- Changelog -->
+    <string name="changelog_tipsy_title">Changelog</string>
+    <string name="changelog_tipsy_error">Unable to load changelog</string>
+
 </resources>
