--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -46,6 +46,12 @@
                        android:targetClass="com.fusionjack.slimota.MainActivity" />
         </Preference>
 
+	<!-- Changelog -->
+        <PreferenceScreen 
+         	android:key="translator"
+         	android:title="@string/changelog_tipsy_title"
+         	android:fragment="com.android.settings.tipsy.Changelog" />        
+
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
                 android:title="@string/device_status"
