--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -147,4 +147,9 @@
         <attr name="aspectRatio" format="float" />
     </declare-styleable>
 
+    <declare-styleable name="SeekBarPreference">
+        <attr name="unitsLeft" format="string" />
+        <attr name="unitsRight" format="string" />
+    </declare-styleable>
+
 </resources>
