--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -324,4 +324,6 @@
     <!-- Visible vertical space we want to show below password edittext field when ime is shown.
          The unit is sp as it is related to the text size of password requirement item. -->
     <dimen name="visible_vertical_space_below_password">20sp</dimen>
+
+    <dimen name="alert_dialog_padding_material">20dp</dimen>
 </resources>
