--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -435,6 +435,11 @@
     <!--Time Contexual Header -->
     <string name="status_bar_custom_header_title">Time Contextual Header</string>
     <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+    <string name="daylight_header_pack_title">Header image pack</string>
+    <string name="status_bar_custom_header_shadow_title">Shadow header image</string>
+    <string name="status_bar_custom_header_shadow_summary">For better visibility on bright images</string>
+    <string name="unit_percent">\u0025</string>   
+
     <string name="equalizer_settings_title">Equalizer</string>
 
     <string name="kernel_settings_title">Kernel</string>
