--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -46,7 +46,7 @@
            android:summary="@string/double_tap_to_sleep_summary"
            android:defaultValue="true" />
 
-    <com.android.settings.tipsy.SystemSettingSwitchPreference
+        <SwitchPreference
             android:key="status_bar_custom_header"
             android:title="@string/status_bar_custom_header_title"
             android:summary="@string/status_bar_custom_header_summary"
@@ -59,7 +59,7 @@
             android:persistent="false"
             android:dependency="status_bar_custom_header" />
 
-    <com.android.settings.tipsy.SeekBarPreference
+    <com.android.settings.chameleonos.SeekBarPreference
             android:key="status_bar_custom_header_shadow"
             android:title="@string/status_bar_custom_header_shadow_title"
             android:summary="@string/status_bar_custom_header_shadow_summary"
