--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -138,4 +138,30 @@
                 android:summary="%s"
                 android:title="@string/display_vr_pref_title" />
 
+        <PreferenceCategory
+                android:key="dashboard_category"
+                android:title="@string/dashboard_category">
+
+        <com.gzr.tavern.preference.SystemSettingSwitchPreference
+                android:key="disable_suggestions"
+                android:title="@string/dashboard_suggestions_title"
+                android:summaryOn="@string/summary_dashboard_suggestions_enabled"
+                android:summaryOff="@string/summary_dashboard_suggestions_disabled"
+                android:defaultValue="true" />
+
+        <com.gzr.tavern.preference.SystemSettingSwitchPreference
+                android:key="disable_dashboard_conditions"
+                android:title="@string/dashboard_conditions_title"
+                android:summaryOn="@string/summary_dashboard_conditions_enabled"
+                android:summaryOff="@string/summary_dashboard_conditions_disabled"
+                android:defaultValue="true" />
+
+        <com.gzr.tavern.preference.SystemSettingSwitchPreference
+                android:key="remove_tile_summary"
+                android:title="@string/remove_tile_summaries_title"
+                android:summary="@string/remove_tile_summaries_summary"
+                android:defaultValue="false" />
+
+     </PreferenceCategory>
+
 </PreferenceScreen>
