Reset battery stats [2/2]
Conflicts:
	res/values/tipsy_strings.xml

--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -247,4 +247,9 @@
 
     <!-- Substratum  -->
     <string name="substratum_title">Substratum</string>
+
+    <!-- Menu label for reset the battery stats -->
+    <string name="menu_stats_reset">Reset stats</string>
+    <!-- Reset stats confirmation dialog's message -->
+    <string name="reset_stats_msg">Battery history stats are going to be reset</string>
 </resources>
