--- a/res/xml/security_settings_misc.xml
+++ b/res/xml/security_settings_misc.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+        xmlns:slim="http://schemas.android.com/apk/res/org.slim.framework"
         android:title="@string/security_settings_title">
 
     <PreferenceCategory android:key="sim_lock"
@@ -45,6 +46,16 @@
     <PreferenceCategory android:key="device_admin_category"
             android:title="@string/device_admin_title"
             android:persistent="false">
+
+        <org.slim.preference.SlimListPreference
+            android:key="advanced_reboot"
+            android:title="@string/advanced_reboot_title"
+            android:dialogTitle="@string/advanced_reboot_dialog_title"
+            android:entries="@array/advanced_reboot_entries"
+            android:entryValues="@array/advanced_reboot_values"
+            android:summary="%s"
+            android:defaultValue="0"
+            slim:slimSettingType="secure" />
 
         <Preference android:key="manage_device_admin"
                 android:title="@string/manage_device_admin"
