--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -19,4 +19,9 @@
     <string name="tipsy_version_title">Tipsy version</string>
     <string name="tipsy_version_default">Unknown</string>
 
+   <!-- Manage applications: show substratum overlays -->
+   <string name="filter_substratum_apps">Substratum overlays</string>
+   <string name="menu_show_substratum">Show overlays</string>
+   <string name="menu_hide_substratum">Hide overlays</string>
+
 </resources>
