fix displaysettings fc
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+                  xmlns:slim="http://schemas.android.com/apk/res/org.slim.framework"
         android:title="@string/display_settings"
         settings:keywords="@string/keywords_display">
 
@@ -93,14 +94,14 @@
                 android:title="@string/doze_title"
                 android:summary="@string/doze_summary" />
 
-        <com.android.settings.preference.SecureSettingSwitchPreference
+        <org.slim.preference.SlimSwitchPreference
                 android:key="doze_notification_invert_enabled"
                 android:title="@string/doze_notification_color_invert_title"
                 android:summaryOn="@string/doze_notification_color_invert_summary_on"
                 android:summaryOff="@string/doze_notification_color_invert_summary_off"
                 android:defaultValue="true" />
 
-        <com.android.settings.preference.SecureSettingSwitchPreference
+        <org.slim.preference.SlimSwitchPreference
                 android:key="notification_title_tint"
                 android:title="@string/notification_tint_title"
                 android:summaryOn="@string/notification_tint_summary_on"
