--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -16,7 +16,6 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
-                  xmlns:slim="http://schemas.android.com/apk/res/org.slim.framework"
         android:title="@string/display_settings"
         settings:keywords="@string/keywords_display">
 
@@ -94,14 +93,14 @@
                 android:title="@string/doze_title"
                 android:summary="@string/doze_summary" />
 
-        <org.slim.preference.SlimSwitchPreference
+        <com.android.settings.preference.SecureSettingSwitchPreference
                 android:key="doze_notification_invert_enabled"
                 android:title="@string/doze_notification_color_invert_title"
                 android:summaryOn="@string/doze_notification_color_invert_summary_on"
                 android:summaryOff="@string/doze_notification_color_invert_summary_off"
                 android:defaultValue="true" />
 
-        <org.slim.preference.SlimSwitchPreference
+        <com.android.settings.preference.SecureSettingSwitchPreference
                 android:key="notification_title_tint"
                 android:title="@string/notification_tint_title"
                 android:summaryOn="@string/notification_tint_summary_on"
