tavern in tipsy options
Signed-off-by: Martinusbe <martinusbe@gmail.com>

--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -17,7 +17,7 @@
 
     <!-- Tavern -->
     <string name="tavern_title">Tavern</string>
-    <string name="header_category_tavern">Extra Options</string>
+    <string name="header_category_tavern">Tipsy Options</string>
 
     <!-- About phone screen, Tipsy version -->
     <string name="tipsy_version_title">Tipsy version</string>
