dashboard: suggestions default off

--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -160,7 +160,7 @@
                 android:title="@string/dashboard_suggestions_title"
                 android:summaryOn="@string/summary_dashboard_suggestions_enabled"
                 android:summaryOff="@string/summary_dashboard_suggestions_disabled"
-                android:defaultValue="true" />
+                android:defaultValue="false" />
 
         <com.gzr.tavern.preference.SystemSettingSwitchPreference
                 android:key="disable_dashboard_conditions"
