Option to use volume keys to control media volume anytime (2/2)
Containing authorship just for respect, as this is different than the original

Some users don't adjust ringtone volume often (e.g. only use toggle to
switch between silent and non-silent) mode. Having an option to
use the volume keys to control media volume anytime allows media
volume to be controllled/muted before entering a game or other apps
with sound in an undesirable location.

--- a/res/values/tipsy_strings.xml
+++ b/res/values/tipsy_strings.xml
@@ -239,4 +239,6 @@
     <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sound</string>
 
+    <!-- Volume keys control media stream, instead of ring/notification -->
+    <string name="volume_key_control_media">Volume keys control media volume</string>
 </resources>
