--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -63,6 +63,12 @@
                 android:title="@string/volume_steps_title"
                 android:fragment="com.android.settings.tesla.VolumeSteps" />
 
+	<!-- Volume keys control media stream -->
+        <com.gzr.tavern.preference.SystemSettingSwitchPreference
+        	android:key="volume_key_control_media"
+   	        android:title="@string/volume_key_control_media"
+	        android:defaultValue="false"/>
+
         <!-- Interruptions -->
         <com.android.settingslib.RestrictedPreference
                 android:key="zen_mode"
